--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,19 +1,19 @@
-<img src="assets/images/LogoAuPetitVillage.jpg" alt="Logo d'une entreprise illustré par un casque avec des ailes" class="logoAPV">
 
-<nav class="navbar">
-    <div class="nav-links">
-        <ul>
-            <li class="links">
-                <a routerLink="/">ACCUEIL</a>
-            </li>
-            <li class="links">
-                <a routerLink="/produits">NOS PRODUITS</a>
-            </li>
-            <li class="links">
-                <a routerLink="/propos">À PROPOS</a>
-            </li>
-        </ul>
-    </div>
+
+<nav class="nav">
+    <img src="assets/images/Logo-Au-Petit-Village.png" alt="Logo d'une entreprise illustré par un casque avec des ailes" class="logoAPV">
+        <div class="nav-links">
+            <ul>
+                <li>
+                    <a routerLink="/" class="links">ACCUEIL</a>
+                </li>
+                <li>
+                    <a routerLink="/produits" class="links">NOS PRODUITS</a>
+                </li>
+                <li>
+                    <a routerLink="/propos" class="links">À PROPOS</a>
+                </li>
+            </ul>
+        </div>
+    <div id="burger"></div>
 </nav>
-
-<img src="assets/images/MenuHamburger.png" alt="Menu Hamburger" class="menu-burger">
