Ajout des produits avec pipe de tri croissant et décroissant

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer>
-    <h2 class="footerTitle">NOS RÉSEAUX SOCIAUX :</h2>
+    <h2 class="footerTitle">NOS RÉSEAUX SOCIAUX</h2>
 
     <div class="socialMedia">
         <a href="#"><img src="assets/images/Logo-Facebook.png" alt="Logo noir du réseau social Facebook"></a>
