--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,12 @@
 <app-header></app-header>
 
+<main>
+    <p>
+        Au petit village a été pensé et créé pour raviver les souvenirs d'antan et nourrir nos âmes d'enfants. <br>
+        On s'est lancé le paris fou de confectionner à la main nos personnages préférés des célèbres bandes dessinées Astérix et Obélix. <br>
+        Notre but est de ramener de la nostalgie et du partage entre petits et grands.
+    </p>
+    <app-products></app-products>
+</main>
+
 <app-footer></app-footer>
