--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -3,10 +3,10 @@ footer{
 }
 
 .footerTitle{
-    font-family: 'COMFORTAA-REGULAR.TTF', sans-serif;
+    font-family: 'BUBBLENEUE', sans-serif;
 }
 
-@media screen and (max-width: 430px) {
+@media screen and (max-width: 500px) {
     .footerTitle{
         font-size: 1.5em;
         padding: 20px 0;
@@ -15,6 +15,7 @@ footer{
 
     .socialMedia{
         display: flex;
+        margin: auto;
         justify-content: space-between;
         padding: 0 20%;
         padding-bottom: 50px;
