recherche par nom fonctionnelle

--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -7,7 +7,12 @@
             <button (click)="toggleSort()" class="sortBtn">Changer le tri</button>
         </span>
 
-        <div class="productItem" *ngFor="let product of products | sortByPrice: ascending">
+        <span>
+            <p>Rechercher par nom :</p>
+            <input type="text" [(ngModel)]="searchTerm" placeholder="Astérix">
+        </span>
+
+        <div class="productItem" *ngFor="let product of products | sortByPrice: ascending | filterByName: searchTerm">
             <img [src]="product.imageUrl" alt="Image d'une petite figurine du personnage Astérix" class="productImg">
             <h2 class="productName">{{product.name}}</h2>
             <p class="productPrice">{{product.price | currency:'EUR' : 'symbol':'1.2-2'}}</p>
