Service product.service prêt à l'emploi, fonctionnement des pages produits détaillées

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -3,3 +3,13 @@
     src: url(/src/assets/fonts/BUBBLENEUE.woff) format('woff');
 }
 
+p{
+    text-align: center;
+}
+
+@media screen and (max-width: 430px) {
+    p{
+        margin: 10px 10px;
+    }
+}
+
