--- a/src/app/products/products.component.css
+++ b/src/app/products/products.component.css
@@ -1,43 +1,28 @@
-.productName{
-    font-family: 'BUBBLENEUE' sans-serif;
-    font-size: 1.5em;
-    padding-left: 5px;
-    border-top: 1px solid #da001e;
+h1{
+    text-align: center;
 }
 
-.products{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
+.productName{
+    border-top: 1px solid #da001e;
 }
 
 .productItem{
     border: 2px solid #da001e;
-    border-radius: 5px;
-    width: 40%;
-    margin: 30px 30px;
 }
 
 .productImg{
-    width: 180px;
-    height: 180px;
-    border-radius: 5px;
     display: flex;
     justify-content: center;
 }
 
 .productPrice{
     text-align: end;
-    margin-right: 5px;
-    font-weight: 700;
     color: #fdd90b;
-    font-size: 1.2em;
 }
 
-.sortLine{
+.sortLine, .filterLine{
     display: flex;
-    left: 0;
+    justify-content: start;
 }
 
 .sortBtn{
@@ -45,9 +30,70 @@
     border: none;
     box-shadow: 0px 0px 5px #151217;
     background-color: #f9d0a3;
-    padding: 0 10px;
 }
 
-.sortOrder{
-    margin-right: 10px;
+.filterCase{
+    border-radius: 5px;
+    border: 1px solid #da001e;
+}
+
+.addToCart{
+    color: white;
+    background-color: rgb(113, 190, 113);
+    border: none;
+}
+
+@media screen and (max-width: 430px) {
+    .sortLine, .filterLine{
+        margin-left: 10px;
+    }
+    
+    .sortBtn{
+        padding: 0 10px;
+        height: 30px;
+    }
+    
+    .sortOrder, .filterName{
+        margin-right: 10px;
+    }
+    
+    .filterCase{
+        height: 30px;
+    }
+
+    .productName{
+        font-size: 1.4em;
+        padding-left: 5px;
+    }
+    
+    .products{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .productItem{
+        border-radius: 5px;
+        width: 40%;
+        margin: 30px 30px;
+    }
+    
+    .productImg{
+        width: 100%;
+        height: 180px;
+        border-radius: 5px;
+    }
+    
+    .productPrice{
+        margin-right: 5px;
+        font-weight: 700;
+        font-size: 1.2em;
+    }
+
+    .addToCart{
+        width: 100%;
+        height: 50px;
+        font-size: 1em;
+        font-weight: 700;
+    }
 }
