--- a/src/app/produits/produits.component.html
+++ b/src/app/produits/produits.component.html
@@ -2,9 +2,17 @@
 
     <div *ngIf="product">
         <div class="productItem">
-            <img [src]="product.imageUrl" alt="Image d'une petite figurine du personnage Astérix" class="productImg">
-            <h2 class="productName">{{product.name}}</h2>
-            <p class="productPrice">{{product.price | currency:'EUR' : 'symbol':'1.2-2'}}</p>
+            <span class="imgSide">
+                <img [src]="product.imageUrl" class="productImg">
+            </span>
+            <span class="infoSide">
+                <h2 class="productName">{{product.name}}</h2>
+                <p class="productDescription">{{product.description}}</p>
+                <span class="line">
+                    <p class="productPrice">{{product.price | currency:'EUR' : 'symbol':'1.2-2'}}</p>
+                    <button href="#" class="buyBtn">ACHETER</button>
+                </span>
+            </span>
         </div>
       
 <app-footer></app-footer>
