--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -13,3 +13,14 @@ p{
     }
 }
 
+@media screen and (min-width: 431px) and (max-width: 600px) {
+    p{
+        margin: 20px 20px;
+    }
+}
+
+@media screen and (min-width: 601px) and (max-width: 900px) {
+    p{
+        margin: 15px 15px;
+    }
+}
