--- a/src/app/products/products.component.css
+++ b/src/app/products/products.component.css
@@ -32,6 +32,15 @@ h1{
     background-color: #f9d0a3;
 }
 
+.sortBtn:hover{
+    border-radius: 5px;
+    border: none;
+    box-shadow: 0px 0px 5px #151217;
+    color: white;
+    background-color: #da001e;
+    cursor: pointer;
+}
+
 .filterCase{
     border-radius: 5px;
     border: 1px solid #da001e;
@@ -41,6 +50,13 @@ h1{
     color: white;
     background-color: rgb(113, 190, 113);
     border: none;
+}
+
+.addToCart:hover{
+    color: white;
+    background-color: rgb(41, 70, 41);
+    border: none;
+    cursor: pointer;
 }
 
 @media screen and (max-width: 430px) {
@@ -94,6 +110,243 @@ h1{
         width: 100%;
         height: 50px;
         font-size: 1em;
+        font-weight: 700;
+    }
+}
+
+@media screen and (min-width: 431px) and (max-width: 600px) {
+    h1{
+        font-size: 3em;
+    }
+    
+    .sortLine, .filterLine{
+        margin-left: 10px;
+    }
+    
+    .sortBtn{
+        padding: 0 10px;
+        height: 30px;
+    }
+    
+    .sortOrder, .filterName{
+        margin-right: 10px;
+    }
+    
+    .filterCase{
+        height: 30px;
+    }
+
+    .productName{
+        font-size: 1.8em;
+        padding-left: 5px;
+    }
+    
+    .products{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .productItem{
+        border-radius: 5px;
+        width: 50%;
+        margin: 30px 30px;
+    }
+    
+    .productImg{
+        width: 100%;
+        height: 250px;
+        border-radius: 5px;
+    }
+    
+    .productPrice{
+        margin-right: 5px;
+        font-weight: 700;
+        font-size: 1.3em;
+    }
+
+    .addToCart{
+        width: 100%;
+        height: 60px;
+        font-size: 1.2em;
+        font-weight: 700;
+    }
+}
+
+
+@media screen and (min-width: 601px) and (max-width: 900px) {
+    h1{
+        font-size: 3em;
+    }
+    
+    .sortLine, .filterLine{
+        margin-left: 40px;
+    }
+    
+    .sortBtn{
+        padding: 0 10px;
+        height: 30px;
+    }
+    
+    .sortOrder, .filterName{
+        margin-right: 20px;
+    }
+    
+    .filterCase{
+        height: 30px;
+    }
+
+    .productName{
+        font-size: 2em;
+        padding-left: 5px;
+    }
+    
+    .products{
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+    
+    .productItem{
+        border-radius: 5px;
+        width: 30%;
+        margin: 30px 30px;
+    }
+    
+    .productImg{
+        width: 100%;
+        height: 250px;
+        border-radius: 5px;
+    }
+    
+    .productPrice{
+        margin-right: 5px;
+        font-weight: 700;
+        font-size: 1.5em;
+    }
+
+    .addToCart{
+        width: 100%;
+        height: 70px;
+        font-size: 1.2em;
+        font-weight: 700;
+    }
+}
+
+@media screen and (min-width: 901px) and (max-width: 1200px) {
+    h1{
+        font-size: 3.2em;
+    }
+    
+    .sortLine, .filterLine{
+        margin-left: 60px;
+    }
+    
+    .sortBtn{
+        padding: 0 10px;
+        height: 30px;
+    }
+    
+    .sortOrder, .filterName{
+        margin-right: 20px;
+    }
+    
+    .filterCase{
+        height: 30px;
+    }
+
+    .productName{
+        font-size: 2.2em;
+        padding-left: 5px;
+    }
+    
+    .products{
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+    
+    .productItem{
+        border-radius: 5px;
+        width: 20%;
+        margin: 30px 30px;
+    }
+    
+    .productImg{
+        width: 100%;
+        height: 250px;
+        border-radius: 5px;
+    }
+    
+    .productPrice{
+        margin-right: 5px;
+        font-weight: 700;
+        font-size: 1.6em;
+    }
+
+    .addToCart{
+        width: 100%;
+        height: 80px;
+        font-size: 1.3em;
+        font-weight: 700;
+    }
+}
+
+@media screen and (min-width: 1201px){
+    h1{
+        font-size: 3.2em;
+    }
+    
+    .sortLine, .filterLine{
+        margin-left: 60px;
+    }
+    
+    .sortBtn{
+        padding: 0 10px;
+        height: 30px;
+    }
+    
+    .sortOrder, .filterName{
+        margin-right: 20px;
+    }
+    
+    .filterCase{
+        height: 30px;
+    }
+
+    .productName{
+        font-size: 2.2em;
+        padding-left: 5px;
+    }
+    
+    .products{
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+    
+    .productItem{
+        border-radius: 5px;
+        width: 15%;
+        margin: 30px 30px;
+    }
+    
+    .productImg{
+        width: 100%;
+        height: 250px;
+        border-radius: 5px;
+    }
+    
+    .productPrice{
+        margin-right: 5px;
+        font-weight: 700;
+        font-size: 1.6em;
+    }
+
+    .addToCart{
+        width: 100%;
+        height: 80px;
+        font-size: 1.3em;
         font-weight: 700;
     }
 }
