Page À propos terminée et responsive

--- a/src/app/propos/propos.component.html
+++ b/src/app/propos/propos.component.html
@@ -1,3 +1,9 @@
 <app-header></app-header>
-
-<app-footer></app-footer>
+    <h1>NOTRE HISTOIRE</h1>
+    
+    <p>Nous sommes passionnés par l'univers mythique et captivant d'Astérix et Obélix. Nous avons fondé "Au Petit Village" avec l'objectif de capturer l'esprit et la magie de ces personnages tant emblématiques à travers des figurines de haute qualité et fidèles à l'oeuvre originale.</p>
+    <p><strong>Notre mission :</strong> Créer des figurines exceptionnelles qui raviront les fans d'Astérix et Obélix, en mettant en avant les détails minutieux et la passion pour l'œuvre originale. Nous nous engageons à offrir des produits qui incarnent l'esprit de la bande dessinée et qui apportent de la joie et de la nostalgie à nos clients.</p>
+    <p><strong>Notre collection :</strong> Que vous soyez un collectionneur passionné, un amateur de bande dessinée ou simplement un admirateur de ces héros intemporels, notre collection de figurines Astérix et Obélix saura vous séduire. Des scènes épiques aux moments comiques, chaque figurine est soigneusement conçue pour refléter l'essence même de ces personnages légendaires.</p>
+    <p><strong>Qualité et authenticité :</strong> Chez "Au Petit Village", la qualité et l'authenticité sont au cœur de notre démarche. Chaque figurine est fabriquée avec un souci du détail inégalé, garantissant une reproduction fidèle des traits distinctifs d'Astérix, Obélix et de leurs compagnons de village. Nous mettons un point d'honneur à ce que chaque pièce soit un véritable hommage à l'univers d'Astérix et Obélix.</p>
+    <p><strong>Rejoignez-nous dans notre aventure :</strong> Nous sommes fiers de vous inviter à découvrir notre univers de figurines Astérix et Obélix, où l'humour, l'aventure et la camaraderie prennent vie sous forme de magnifiques créations. Que vous soyez un collectionneur chevronné ou un amateur curieux, soyez assuré que chez "Au Petit Village", vous trouverez des trésors à ajouter à votre collection.</p>
+    <app-footer></app-footer>
